Finalisation du logiciel